--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,44 @@
-asgiref==3.7.2
+asgiref==3.8.1
+black==24.8.0
 certifi==2023.5.7
-cffi==1.15.1
+cffi==1.17.1
 charset-normalizer==3.1.0
+click==8.1.7
+colorama==0.4.6
 crispy-bootstrap4==2022.1
 cryptography==41.0.1
+cssbeautifier==1.15.1
 defusedxml==0.7.1
 Django==4.2.1
 django-allauth==0.54.0
+django-ckeditor==6.0.0
 django-crispy-forms==2.0
 django-dump-die==0.1.5
 django-jazzmin==2.6.0
-idna==3.4
-mysqlclient==2.1.1
+django-js-asset==2.2.0
+djlint==1.35.2
+EditorConfig==0.12.4
+html-tag-names==0.1.2
+html-void-elements==0.1.0
+idna==3.10
+jsbeautifier==1.15.1
+json5==0.9.25
+mypy-extensions==1.0.0
 oauthlib==3.2.2
-Pillow==9.5.0
+packaging==24.1
+pathspec==0.12.1
+pillow==10.4.0
+platformdirs==4.3.6
 pycparser==2.21
 PyJWT==2.7.0
 python3-openid==3.2.0
+PyYAML==6.0.2
+regex==2024.9.11
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 sslcommerz-lib==1.0
+tqdm==4.66.5
 tzdata==2023.3
 urllib3==2.0.2
